--- a/jscroot/template/header.html
+++ b/jscroot/template/header.html
@@ -1,4 +1,4 @@
-<img src="assets/img/perfil.jpg" alt="" class="header__img">
+<img src="assets/img/moly.jpg" alt="" class="header__img">
 
 <a href="#" class="header__logo">Ratu</a>
 
